[project]
name = "diffbot-kg"
version = "0.2.4"
description = "Python client for the Diffbot Knowledge Graph API."
authors = [{ name = "Brendan C. Smith" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.3",
  "aiolimiter>=1.1.0",
  "tenacity>=8.2.3",
  "yarl>=1.9.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0.1",
  "pytest-asyncio>=0.23.5",
  "pytest-mock>=3.12.0",
  "ruff>=0.2.2",
  "python-dotenv>=1.0.1",
  "pytest-vcr>=1.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.hatch.build.targets.sdist]
exclude = [".trunk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
